# PDJE-Godot-Plugin

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  PDJE_Wrapper.gdextension  PDJE_Wrapper.gdextension.uid  conanfile.txt  icon.svg.import  obj.tscn  pdje_wrapper.tscn  project.godot
.github/workflows/: autoTag.yml  autouploadtest.yml  main.yml
Wrapper_src/: PDJE_Utils.hpp  PDJE_Wrapper.cpp  PDJE_Wrapper.hpp  PlayerWrapper.cpp  PlayerWrapper.hpp  register_types.cpp  register_types.h
Wrapper_src/DataLine/: CoreLine.cpp  CoreLine.hpp
Wrapper_src/Editor/: EditorArgs.cpp  EditorArgs.hpp  EditorFunctions.cpp  EditorWrapper.cpp  EditorWrapper.hpp
Wrapper_src/Player/: EnumWrapper.cpp  EnumWrapper.hpp  FXArgWrapper.cpp  FXArgWrapper.hpp  FXWrapper.cpp  FXWrapper.hpp  MusPanelWrapper.cpp  MusPanelWrapper.hpp  MusPannelWrapper.cpp  MusPannelWrapper.hpp  PlayerWrapper.cpp  PlayerWrapper.hpp
cmake/: godotArchNameSetter.cmake  godotExternalSetter.cmake
